# news_parser

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Article.vue  Footer.vue  Header.vue  Home.vue
news_parser/news_api/: admin.py  models.py  serializers.py  urls.py  views.py
news_parser/news_api/migrations/: 0001_initial.py  0002_remove_article_author.py  0003_auto_20200505_1332.py  0004_auto_20200505_1408.py  0005_auto_20200505_1459.py  0006_auto_20200505_1505.py  0007_auto_20200505_1509.py  0008_auto_20200505_1512.py  0009_auto_20200505_1533.py  0010_auto_20200505_1538.py  0011_auto_20200506_1204.py
news_parser/news_parser/: settings.py  urls.py
news_parser/parsing/: models.py  parser.py  writer.py
news_parser/parsing/migrations/: 0001_initial.py  0002_auto_20200505_1334.py  0003_auto_20200505_1408.py  0004_delete_articlenewssite.py
news_parser/parsing/tests/: news_parser_test.py  robot_parser_test.py
